--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==2.1.0
 altair==5.2.0
+astunparse==1.6.3
 attrs==23.2.0
 blinker==1.7.0
 cachetools==5.3.3
@@ -9,9 +10,13 @@ click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
 dm-tree==0.1.8
+flatbuffers==24.3.7
 fonttools==4.50.0
+gast==0.5.4
 gitdb==4.0.11
 GitPython==3.1.42
+google-pasta==0.2.0
+grpcio==1.62.1
 h5py==3.10.0
 idna==3.6
 Jinja2==3.1.3
@@ -19,6 +24,8 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 keras==3.0.5
 kiwisolver==1.4.5
+libclang==16.0.6
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -27,6 +34,7 @@ ml-dtypes==0.3.2
 namex==0.0.7
 numpy==1.26.4
 opencv-python==4.9.0.80
+opt-einsum==3.3.0
 packaging==23.2
 pandas==2.2.1
 pillow==10.2.0
@@ -43,13 +51,21 @@ rich==13.7.1
 rpds-py==0.18.0
 scipy==1.12.0
 seaborn==0.13.2
+setuptools==69.2.0
 six==1.16.0
 smmap==5.0.1
 streamlit==1.32.2
 tenacity==8.2.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+termcolor==2.4.0
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+Werkzeug==3.0.1
+wheel==0.43.0
+wrapt==1.16.0
